--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -101,6 +101,8 @@ jobs:
           tags: "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}" 
           build-args: |
             HTTP_PORT=80
+          env_vars: |
+            PORT=80
 
       # END - Docker auth and build
 
@@ -112,6 +114,8 @@ jobs:
           region: ${{ env.REGION }}
           allow-unauthenticated: true
           image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}
+          env_vars: |
+            PORT=80
 
       # # If required, use the Cloud Run url output in later steps
       # - name: Show Output
